--- a/style.css
+++ b/style.css
@@ -98,8 +98,15 @@ padding: 10px;
     color: white;
     padding: 10px;
     border-radius: 30px;
+    border:solid #A435F0; 1px;
     
-    
+}
+.categories p:hover
+{
+    background-color: transparent;
+    color: black;
+    transition: 1s;
+    border:solid #A435F0; 1px;
 }
 .sale-image img
 {
@@ -120,6 +127,22 @@ padding: 10px;
     border: solid black 2px;
     padding: 20px;
     background-color: white;
+    animation-name: zoom;
+    animation-duration: 2s;
+    
+}
+@keyframes zoom {
+    
+    0%
+    {
+transform: scale(0);
+opacity: 0;
+    }
+    100%
+    {
+transform: scale(1);
+opacity: 1;
+    }
 }
 
 .recommended
